// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Image matches correct image by path substring 1`] = `
<div
  className="gatsby-image-wrapper gatsby-image-wrapper-constrained"
  data-gatsby-image-wrapper=""
  style={
    {
      "backgroundColor": undefined,
      "display": "inline-block",
      "overflow": "hidden",
      "position": "relative",
      "verticalAlign": "top",
    }
  }
>
  <div
    style={
      {
        "display": "block",
        "maxWidth": 200,
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      role="presentation"
      src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='200'%20width='200'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
      style={
        {
          "display": "block",
          "maxWidth": "100%",
          "position": "static",
        }
      }
    />
  </div>
  <div
    aria-hidden={true}
    data-placeholder-image=""
    style={
      {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <img
    alt="Avatar"
    data-gatsby-image-ssr=""
    data-main-image=""
    data-src="/static/avatar.png"
    data-srcset="/static/avatar.png 200w"
    decoding="async"
    loading="lazy"
    sizes="(min-width: 200px) 200px, 100vw"
    style={
      {
        "backgroundColor": undefined,
        "height": "100%",
        "left": 0,
        "objectFit": undefined,
        "objectPosition": undefined,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "transform": "translateZ(0)",
        "transition": "opacity 250ms linear",
        "width": "100%",
        "willChange": "opacity",
      }
    }
  />
  <noscript>
    <img
      alt="Avatar"
      data-gatsby-image-ssr=""
      data-main-image=""
      decoding="async"
      loading="lazy"
      sizes="(min-width: 200px) 200px, 100vw"
      src="/static/avatar.png"
      srcSet="/static/avatar.png 200w"
      style={
        {
          "backgroundColor": undefined,
          "height": "100%",
          "left": 0,
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "opacity 250ms linear",
          "width": "100%",
          "willChange": "opacity",
        }
      }
    />
  </noscript>
  <script
    dangerouslySetInnerHTML={
      {
        "__html": "const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}",
      }
    }
    type="module"
  />
</div>
`;

exports[`Image renders correctly when image is found 1`] = `
<div
  className="gatsby-image-wrapper gatsby-image-wrapper-constrained"
  data-gatsby-image-wrapper=""
  style={
    {
      "backgroundColor": undefined,
      "display": "inline-block",
      "overflow": "hidden",
      "position": "relative",
      "verticalAlign": "top",
    }
  }
>
  <div
    style={
      {
        "display": "block",
        "maxWidth": 800,
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      role="presentation"
      src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='600'%20width='800'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
      style={
        {
          "display": "block",
          "maxWidth": "100%",
          "position": "static",
        }
      }
    />
  </div>
  <div
    aria-hidden={true}
    data-placeholder-image=""
    style={
      {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <img
    alt="A photo"
    data-gatsby-image-ssr=""
    data-main-image=""
    data-src="/static/photo.jpg"
    data-srcset="/static/photo.jpg 800w"
    decoding="async"
    loading="lazy"
    sizes="(min-width: 800px) 800px, 100vw"
    style={
      {
        "backgroundColor": undefined,
        "height": "100%",
        "left": 0,
        "objectFit": undefined,
        "objectPosition": undefined,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "transform": "translateZ(0)",
        "transition": "opacity 250ms linear",
        "width": "100%",
        "willChange": "opacity",
      }
    }
  />
  <noscript>
    <img
      alt="A photo"
      data-gatsby-image-ssr=""
      data-main-image=""
      decoding="async"
      loading="lazy"
      sizes="(min-width: 800px) 800px, 100vw"
      src="/static/photo.jpg"
      srcSet="/static/photo.jpg 800w"
      style={
        {
          "backgroundColor": undefined,
          "height": "100%",
          "left": 0,
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "opacity 250ms linear",
          "width": "100%",
          "willChange": "opacity",
        }
      }
    />
  </noscript>
  <script
    dangerouslySetInnerHTML={
      {
        "__html": "const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}",
      }
    }
    type="module"
  />
</div>
`;
